--- a/gb/21/3/13/n12809318.md
+++ b/gb/21/3/13/n12809318.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【财商天下】农夫山泉有点钱 钟睒睒“战争史”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/03/0313_1200x800-600x400.jpg" />///image2=```diff
 - 【财商天下】钟睒睒是谁？怎么一夜之间成为亚洲首富？卖水竟可以打败马云、马化腾？这个“神秘商人”背后的故事很传奇，农夫山泉有点甜、有点钱、也有点烦。（大纪元香港新闻中心）
@@ -8,25 +8,25 @@
 <h6>【财商天下】钟睒睒是谁？怎么一夜之间成为亚洲首富？卖水竟可以打败马云、马化腾？这个“神秘商人”背后的故事很传奇，农夫山泉有点甜、有点钱、也有点烦。（大纪元香港新闻中心）
 </h6>
 <hr>
-	<p>【大纪元2021年03月13日讯】前两天，也就是3月9日的时候，福布斯实时数据榜显示，腾讯总裁马化腾以身家637亿美元，在全球首富榜单中排名第14位，也是中国首富，而<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%86%9C%E5%A4%AB%E5%B1%B1%E6%B3%89.md#1">农夫山泉</a>的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%92%9F%E7%9D%92%E7%9D%92.md#1">钟睒睒</a>以619亿美元的身家排名第17位，让出了中国首富的宝座。</p>
-<p>如果只是提<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%92%9F%E7%9D%92%E7%9D%92.md#1">钟睒睒</a>的名字，可能很多人不知道是谁，但是提起“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%86%9C%E5%A4%AB%E5%B1%B1%E6%B3%89.md#1">农夫山泉</a>有点甜”，相信很多人都听说过，这句广告词把“农夫山泉”打造成了一个在中国家喻户晓的饮用水品牌，而农夫山泉的系列饮料，像是东方树叶、尖叫、维他命水等，更受到青年人的追捧。</p>
+	<p>【大纪元2021年03月13日讯】前两天，也就是3月9日的时候，福布斯实时数据榜显示，腾讯总裁马化腾以身家637亿美元，在全球首富榜单中排名第14位，也是中国首富，而农夫山泉的钟睒睒以619亿美元的身家排名第17位，让出了中国首富的宝座。</p>
+<p>如果只是提钟睒睒的名字，可能很多人不知道是谁，但是提起“农夫山泉有点甜”，相信很多人都听说过，这句广告词把“农夫山泉”打造成了一个在中国家喻户晓的饮用水品牌，而农夫山泉的系列饮料，像是东方树叶、尖叫、维他命水等，更受到青年人的追捧。</p>
 <p>而农夫山泉，不只是有点甜，有点钱，还一直是有点烦，这是为什么呢？今天的内容，就来聊一聊这个钟睒睒和他的农夫山泉。</p>
-<p><a src=""></a><a href="https://d19vw3711v9lks.cloudfront.net/T6iPeMdTd"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/ukv6cL1AMd4" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p><a src=""></a><a href="https://dnfbwsos78njn.cloudfront.net/K8fJsEyit"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/ukv6cL1AMd4" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <h2>钟睒睒就是农夫山泉的老板</h2>
 <p>去年9月时，一个从没有出现过富豪榜的人，在一天之内突然就冲上了中国富豪的榜首，这个人就是钟睒睒，当时钟睒睒的身家暴涨到629亿美元，超过了马化腾，但半个小时后就跌落到了第三位。</p>
 <p>两个月后，钟睒睒再度成为中国首富，而且在去年底的时候超越了印度首富安巴尼（Mukesh Ambani），成为了亚洲首富，在全球排名第11位。在巅峰时期，钟睒睒还曾经一度以923亿美元的身家，超越过脸书的CEO朱克伯格，排在了全球富豪榜第5位。</p>
 <p>与多数大富豪们不一样的是，钟睒睒开始创业时，年纪不算年轻了，1993年的时候，39岁的钟睒睒才正式开始了创业之旅，他种过蘑菇、卖过窗帘，还卖过龟鳖丸。1996年，钟睒睒创立了“农夫山泉”品牌。2020年，钟睒睒控股的两间公司——农夫山泉和万泰生物相继上市，钟睒睒的身价开始暴涨，直接问鼎中国首富。</p>
 <p>和马云、马化腾的互联网企业不同的是，钟睒睒聚焦实体企业，平时寡言、低调，被称为“独狼”，他成功的密码是营销，除了“农夫山泉有点甜”之外，还有“我们是大自然的搬运工”这样的让人印象深刻的广告语。钟睒睒曾做过5年记者，所以特别懂得如何利用媒体，但同时，钟睒睒的企业也一直深陷在舆论漩涡。</p>
-<p>20多年来，农夫山泉不仅和同行之间的战争不断，和媒体的战斗也一直没有停过，甚至和政府部门也曾经打过几个回合。和<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%93%B6%E8%A3%85%E6%B0%B4.md#1">瓶装水</a>行业内的其他大佬相比，农夫山泉从起步到争霸市场的发展史，简直就是一部情节跌宕的武侠片。</p>
+<p>20多年来，农夫山泉不仅和同行之间的战争不断，和媒体的战斗也一直没有停过，甚至和政府部门也曾经打过几个回合。和瓶装水行业内的其他大佬相比，农夫山泉从起步到争霸市场的发展史，简直就是一部情节跌宕的武侠片。</p>
 <h2>与水企的战争</h2>
-<p>钟睒睒曾表示，企业不会炒作就是木乃伊。农夫山泉当年正是靠着炒作起家的。1996年，农夫山泉踏入中国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%93%B6%E8%A3%85%E6%B0%B4.md#1">瓶装水</a>市场时，这个市场已经被雀巢、乐百氏、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A8%83%E5%93%88%E5%93%88.md#1">娃哈哈</a>三分天下。摆在钟睒睒面前最棘手的问题就是农夫山泉如何破局？水不像饮料，本身在口感上很难有明显的区分，买瓶装水的人，买的就是一个概念。</p>
+<p>钟睒睒曾表示，企业不会炒作就是木乃伊。农夫山泉当年正是靠着炒作起家的。1996年，农夫山泉踏入中国瓶装水市场时，这个市场已经被雀巢、乐百氏、娃哈哈三分天下。摆在钟睒睒面前最棘手的问题就是农夫山泉如何破局？水不像饮料，本身在口感上很难有明显的区分，买瓶装水的人，买的就是一个概念。</p>
 <p>在钟睒睒的亲自操刀下，“农夫山泉有点甜”的广告语开始在电视上循环播放。农夫山泉还出钱赞助了1998年世界杯足球赛的转播，顺势打出了“喝农夫山泉，看98世界杯”的口号。</p>
 <p>但钟睒睒砸下的重金并没有帮助农夫山泉打开市场。于是在2000年，钟睒睒策划了一场声势浩大的“水战”。当时，农夫山泉突然宣布停止生产纯净水，转而生产天然水，原因是“纯净水对健康无益”。</p>
 <p>为了给民众灌输“天然水”的概念，农夫山泉推出了3个实验：</p>
 <p>首先是植物实验：将水仙花分别放在了纯净水和农夫山泉的天然水中，7天后，纯净水中的水仙花根须只长出2釐米，而天然水中的长出了4个釐米；40天后，纯净水中的水仙花根须重量不到5克，天然水中的根须却超过了12克。</p>
 <p>接下来，他们又推出了动物试验：将大白鼠身上分管水盐生理平衡的肾上腺摘除，在给白鼠喂食相同食物的基础上，让它们分别喝纯净水和农夫山泉的天然水，6天后喝纯净水的大白鼠只有20%还活着，而喝天然水的有40%还活着。</p>
 <p>最后呢，又做了细胞试验：将纯净水和天然水分别放入两个试管，然后滴进两滴血，放在高速离心机里离心，结果纯净水中的血红细胞胀破了。</p>
-<p>这3个实验的结果在媒体上公布之后，可以想像，立刻就掀起了一场纯净水和天然水的大战，在这场“水战”中，农夫山泉以一敌百，对抗包括<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A8%83%E5%93%88%E5%93%88.md#1">娃哈哈</a>在内的饮用水企业，2000年6月，杭州娃哈哈邀请69家水企举行了“屠农”大会，对农夫山泉口诛笔伐。</p>
+<p>这3个实验的结果在媒体上公布之后，可以想像，立刻就掀起了一场纯净水和天然水的大战，在这场“水战”中，农夫山泉以一敌百，对抗包括娃哈哈在内的饮用水企业，2000年6月，杭州娃哈哈邀请69家水企举行了“屠农”大会，对农夫山泉口诛笔伐。</p>
 <p>随后还引发了一场诉讼，最终虽然是农夫山泉输了官司，但却赢了市场，农夫山泉在消费者心目中留下了天然健康的形象，市场份额一路上升。</p>
 <p>由于当年的诉讼赔偿费用不高，农夫山泉以很小的代价就在竞争激烈的瓶装水市场中出位。直到今天，仍然有消费者认为“纯净水无非就是自来水的净化，而且还把水中天然有益人体的物质给净没了”。</p>
 <p>当然，农夫山泉的这个举动几乎得罪了所有的同行，很多人指责他不讲商业道德，靠炒作牟利。</p>
@@ -61,42 +61,38 @@
 <p>策划：许巧茹、宇文铭<br />
 主播：蔚然<br />
 撰文：陈思雨、财商经济研究所<br />
-<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B4%A2%E5%95%86%E5%A4%A9%E4%B8%8B.md#1">财商天下</a>：<ahref="http://bit.ly/3hvUfr7">http://bit.ly/3hvUfr7</a></p>
+财商天下：<ahref="http://bit.ly/3hvUfr7">http://bit.ly/3hvUfr7</a></p>
 <p>责任编辑：连书华◇</p>
 	
 <hr>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/3/9/n12799911.md#1">【财商天下】两会再提房住不炒 压得住楼市高风险？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/3/10/n12802480.md#1">【财商天下】重庆百年煤矿熄火 陈敏尔下令内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/3/11/n12805079.md#1">【财商天下】中信国安7年财务造假 谁是败家子？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/3/12/n12807589.md#1">【财商天下】中共掀新能源汽车战 特斯拉遇险？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">Apple AirPods Pro无线耳机 USB-C充电 2倍主动降噪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165769.md#1">这种杯子为何如此火爆 加州女子偷65个被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/3/9/n12799911.md#1">【财商天下】两会再提房住不炒 压得住楼市高风险？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/3/10/n12802480.md#1">【财商天下】重庆百年煤矿熄火 陈敏尔下令内幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/3/11/n12805079.md#1">【财商天下】中信国安7年财务造假 谁是败家子？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/3/12/n12807589.md#1">【财商天下】中共掀新能源汽车战 特斯拉遇险？</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/6/7/n10464792.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（二）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/8/n11370721.md#1" target="_blank">爱德华?斯考特: 对迫害善良的一个政治上的回应</a></li><hr>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/28/n10813474.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/26/n11412078.md#1" target="_blank">胡平：未来道德重建 法轮功将发挥更大作用</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/26/n14189768.md#1">【未解之谜】人间蒸发的民族</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/3/n14193562.md#1">身上覆满白雪 印度修行者山区打坐画面惊人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/28/n14191118.md#1">战争爆发前一年 冥府制作造劫簿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/26/n14189240.md#1">【古道人生】曾遭亲戚白眼相看的他 因何成巨富？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/1/n14192471.md#1">人能否预知自己死亡？专家分享奇特案例</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/5/n14195205.md#1">【全球新闻】川普获胜 最高法院驳回科州指控</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/4/n14194614.md#1">【中国禁闻】中共高层内乱？ 两会总理记者会取消</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/4/n14194782.md#1">【舞蹈】飞天艺术学院2023第二学期舞蹈考试（高班 男生）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/3/n14193593.md#1">科学家发现抛硬币胜负概率并不对等</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/3/n14193603.md#1">在美名校就读博士 逾10中国学生被拒入美</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/28/n14190818.md#1">为何F-35杀伤力无与伦比 海军飞行员解析</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/4/n14194863.md#1">张晋新片遭遇滑铁卢 首映票房仅16万元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/2/n14193468.md#1">港星张致恒自曝家庭拮据 发收款码求网民捐款</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/3/n14193656.md#1">张清芳高雄巨蛋开唱 见帅儿突登台感动喷泪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/2/n14193425.md#1">网红小马哥夫妇涉偷税遭罚317万 账号被禁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/4/n14194921.md#1">刘若英素颜现身菜市场 吐职业妇女辛酸引共鸣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：Stanley 保温杯亚马逊有优惠 限时限色限14oz</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/4/n14194623.md#1">房地产佣金制度将大转变 屋主有福了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/26/n14189752.md#1">深棕尿液是肾衰竭？当心5种尿液可能是疾病信号</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/3/n14193784.md#1">专家：这5种工作习惯透露 你有忧郁症了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/4/n14194538.md#1">超越“九弯十八拐” 世界最危险公路在土耳其</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277490.md#1">故宫六百年不淹水是怎样作到的？为何纪录不保？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276161.md#1">【古道人生】商人只重利？义气干霄的商人在这里</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283716.md#1">【新闻大破解】启动无锚印钞？红朝末象总爆发</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283950.md#1">【时事金扫描】中东新战争？真主党轰以色列</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283947.md#1">【新闻五人行】大陆金融女学霸轻生 全网痛议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283509.md#1">英国民宅天花板上藏18万只蜜蜂 7年没人知</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283104.md#1">逛Costco时五种令员工和购物者恼火的行为</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283044.md#1">《繁花》在大陆爆红 香港收视率却触底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282327.md#1">吴亦凡入狱3年 网传其母欲卖豪车换现金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282430.md#1">郑爽未履行金额超1亿 剧集出品方股权被冻结</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283097.md#1">世界小姐张梓琳晒带娃照 称8岁长女是苗条姐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282363.md#1">赚多少钱才够 赚多少才算富人 美国人有答案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273401.md#1">如何规划退休生活？简化生活 让身心受益</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282796.md#1">什么是“金钱畸形症”？ 如何应对？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280784.md#1">告别湿答答 内外除湿这样做</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281348.md#1">日本北海道之旅 难忘的农庄餐馆</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/3/13/n12809318.htm">【财商天下】农夫山泉有点钱 钟睒睒“战争史”</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/21/3/13/n12809318.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/21/3/13/n12809318.htm">【财商天下】农夫山泉有点钱 钟睒睒“战争史”</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/21/3/13/n12809318.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
